tests/toylang/neg/001146_mutation.toylang
program a = { if while a then sleep; } .
